# TaroBot

./: .dockerignore  .env  .gitignore  DOCKER_README.md  Dockerfile  Dockerfile.pip  Makefile  bot.py  config.py  docker-compose.yml  env.example  get_username.py  inline_daily_prediction.py  keyboards.py  main.py  phrases.txt  pyproject.toml  requirements.txt  send_weekly_prediction.py  test_main_nicknames.py  test_real_users.py  vox_example.py  vox_executable.py
db/: User.py  __init__.py
handlers/: answers.py  compatibility.py  prediction.py  qualities.py  yes_no.py
prompts/: __init__.py  answers_prompt.txt  answers_prompt_gpt.txt  compatibility_of_2_prompt.txt  compatibility_of_2_prompt_gpt.txt  compatibility_prompt.txt  compatibility_prompt_gpt.txt  daily_prediction_prompt.txt  daily_prediction_prompt_gpt.txt  global_prompt.txt  prediction_prompt.txt  qualities.yaml  qualities_prompt.txt  qualities_prompt_gpt.yaml  yes_no_prompt.txt  yes_no_prompt_gpt.txt
translations/: get_phrase.py
translations/strings/: readme.md  strings.ru.yaml
utils/: get_user_info.py  login_requied.py  nickname_codec.py  openai_gpt.py  zodiac.py
vox/: api.py  asyncapi.py  exceptions.py  models.py  openapi.json
