[project]
name = "tarobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.20.0.post0",
    "aiohttp>=3.11.18",
    "aiopg>=1.4.0",
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "mixpanel>=4.10.1",
    "openai>=1.93.0",
    "peewee-async>=1.1.0",
    "pewee>=0.1.0.dev9",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
]
